plugins {
    id 'idea'
    id 'jacoco'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'com.modrinth.minotaur' version '2.+'
    // Applies maven-publish + signing; talks to Central Portal upload API (not Maven PUT).
    id 'com.vanniktech.maven.publish' version '0.37.0'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    srcDir('src/generated/resources')

    exclude("**/*.bbmodel")
    exclude("src/generated/**/.cache")
}

repositories {
    mavenCentral()
    maven { url = "https://maven.blamejared.com/" }
    maven { url = "https://api.modrinth.com/maven" }
}

base {
    archivesName = "${mod_id}-neoforge"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

    withSourcesJar()
    withJavadocJar()
}

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }
    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        server {
            server()
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    // Put Minecraft / NeoForge on the test classpath so pure unit tests can
    // reference CompoundTag and other game types (Forge FG did this by default).
    unitTest {
        enable()
        testedMod = mods."${mod_id}"
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "mezz.jei:jei-1.21.1-neoforge:${jei_version}"
    
    compileOnly "org.appliedenergistics:appliedenergistics2:${ae2_version}:api"

    implementation "maven.modrinth:jade:${jade_version}+neoforge"

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.configureEach { task ->
    if (task.name == 'plainJavadocJar') {
        task.enabled = false
    }
}

mavenPublishing {
    publishToMavenCentral()
    signAllPublications()

    coordinates(group.toString(), base.archivesName.get(), version.toString())

    pom {
        name = mod_name
        description = mod_description
        inceptionYear = '2026'
        url = 'https://github.com/HalfCooler/IC2R'
        licenses {
            license {
                name = 'GNU Affero General Public License v3.0'
                url = 'https://www.gnu.org/licenses/agpl-3.0.html'
                distribution = 'repo'
            }
        }
        developers {
            developer {
                id = 'HalfCooler'
                name = 'HalfCooler'
                url = 'https://github.com/HalfCooler'
            }
        }
        scm {
            url = 'https://github.com/HalfCooler/IC2R'
            connection = 'scm:git:git://github.com/HalfCooler/IC2R.git'
            developerConnection = 'scm:git:ssh://git@github.com/HalfCooler/IC2R.git'
        }
    }
}

// Keep existing signingKeyFile layout; also works with standard signingInMemoryKey* props.
signing {
    def keyId = findProperty('signing.keyId')
    def keyFile = findProperty('signingKeyFile')
    def password = findProperty('signing.password')
    if (keyId != null && keyFile != null && password != null) {
        useInMemoryPgpKeys(keyId.toString(), file(keyFile.toString()).text, password.toString())
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
    options.charSet = 'UTF-8'
    options.docEncoding = 'UTF-8'
    // Large legacy codebase: public APIs often lack full JavaDoc; do not fail the build on doclint.
    options.addStringOption('Xdoclint:none', '-quiet')
    failOnError = false
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

// Sync gradle.properties mod_version into release.md + README version badge.
// Restored after NeoForge migration; branch version scheme is 21.1.xxx.
// Capture layout objects at configuration time for configuration-cache safety.
tasks.register('syncVersion') {
    description = 'Sync mod_version to release.md and README.md, and require version to increase'
    group = 'versioning'

    def propsPath = layout.projectDirectory.file('gradle.properties')
    def versionPath = layout.buildDirectory.file('syncVersion/lastVersion.txt')
    def releasePath = layout.projectDirectory.file('release.md')
    def readmePath = layout.projectDirectory.file('README.md')

    doLast {
        // Always use UTF-8. On Chinese Windows the JVM default is often GBK;
        // File.text / readLines() would re-encode README/release.md incorrectly.
        def utf8 = java.nio.charset.StandardCharsets.UTF_8
        def versionPattern = /^21\.1\.(\d+)$/
        def propsFile = propsPath.asFile
        def versionFile = versionPath.get().asFile
        def releaseFile = releasePath.asFile
        def readmeFile = readmePath.asFile

        def props = new Properties()
        propsFile.withInputStream { stream ->
            // Properties.load(InputStream) is ISO-8859-1; load as UTF-8 characters.
            props.load(new InputStreamReader(stream, utf8))
        }
        def currentVersion = props['mod_version']

        def matcher = currentVersion =~ versionPattern
        if (!matcher) {
            throw new GradleException("Incorrect mod version: $currentVersion, expected: 21.1.xxx")
        }
        def currentXxx = matcher[0][1] as int

        def lastXxx = -1
        def lastVersion = 'None'
        if (versionFile.exists()) {
            lastVersion = versionFile.getText(utf8.name()).trim()
            def lastMatcher = lastVersion =~ versionPattern
            if (lastMatcher) {
                lastXxx = lastMatcher[0][1] as int
            }
        }

        if (currentXxx <= lastXxx) {
            def lineNum = 1
            propsFile.eachLine(utf8.name()) { line ->
                if (line.startsWith('mod_version=')) {
                    throw new GradleException(
                            "gradle.properties:${lineNum}: Current version is ${currentVersion}, " +
                                    "but last synced version is ${lastVersion}"
                    )
                }
                lineNum++
            }
            return
        }

        versionFile.parentFile.mkdirs()
        versionFile.setText(currentVersion, utf8.name())
        logger.lifecycle("syncVersion: Version has been recorded as $currentVersion")

        if (releaseFile.exists()) {
            def releaseLines = releaseFile.readLines(utf8.name())
            if (releaseLines.isEmpty()) {
                releaseFile.setText("# $currentVersion\n", utf8.name())
            } else {
                releaseLines[0] = "# $currentVersion"
                releaseFile.setText(releaseLines.join('\n') + '\n', utf8.name())
            }
            logger.lifecycle("syncVersion: release.md title has been updated to # $currentVersion")
        } else {
            logger.lifecycle('syncVersion: release.md not found, skipping')
        }

        if (readmeFile.exists()) {
            def readmeText = readmeFile.getText(utf8.name())
            // shields.io requires '-' escaped as '--'
            def shieldsVersion = currentVersion.replace('-', '--')
            def badgePattern = ~/<img src="https:\/\/img\.shields\.io\/badge\/Version-[^"]+" alt="Version [^"]*">/
            def newBadge = "<img src=\"https://img.shields.io/badge/Version-${shieldsVersion}-blue\" alt=\"Version ${currentVersion}\">"
            if (readmeText.find(badgePattern)) {
                readmeText = readmeText.replaceAll(badgePattern, newBadge)
                readmeFile.setText(readmeText, utf8.name())
                logger.lifecycle('syncVersion: README.md Version badge has been updated')
            } else {
                logger.lifecycle('syncVersion: Version badge not found in README.md, skipping')
            }
        } else {
            logger.lifecycle('syncVersion: README.md not found, skipping')
        }

        logger.lifecycle("syncVersion: Sync completed ($currentVersion)")
    }
}
